--- a/gerbil-calendar/package.json
+++ b/gerbil-calendar/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.0",
     "react-with-firebase-auth": "^1.3.2",
     "reactstrap": "^8.7.0",
+    "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
