--- a/gerbil-calendar/package.json
+++ b/gerbil-calendar/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.6.13",
     "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
     "@fullcalendar/react": "^5.4.0",
@@ -13,12 +14,11 @@
     "bootstrap": "^4.5.3",
     "firebase": "^8.1.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-with-firebase-auth": "^1.3.2",
     "reactstrap": "^8.7.0",
-    "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
